Track 1 files into repository.
- modified assets/css/neodocs.css

Auto commit by GitBook Editor

--- a/assets/css/neodocs.css
+++ b/assets/css/neodocs.css
@@ -832,8 +832,8 @@ section.cover.has-mask .mask {
 }
 
 .sidebar ul li.active>a {
-	color: #ea6f5a;
-	color: var(--theme-color,#ea6f5a);
+	color: #eae705;
+	color: var(--theme-color,#eae705);
 	font-weight: 600
 }
 
