--- a/assets/css/neodocs.css
+++ b/assets/css/neodocs.css
@@ -55,9 +55,6 @@
 }
 
 .markdown-section h1 {
-    font-family: 'FFF-Forward';
-    text-transform: uppercase;
-    letter-spacing:.15em;
     color: rgba(255, 255, 255, 0.8);
     text-shadow: 0 2px 5px rgba(0,0,0,.5);
 
@@ -67,7 +64,7 @@
 .sidebar>h1 a {
     font-family: 'FFF-Forward';
     text-shadow: 0 2px 5px rgba(0,0,0,.5);
-
+    text-transform: uppercase;
 }
 
 * {
@@ -834,7 +831,9 @@ section.cover.has-mask .mask {
 .sidebar ul li.active>a {
 	color: #eae705;
 	color: var(--theme-color,#eae705);
-	font-weight: 600
+    font-weight: 600;
+    text-shadow: 0 2px 5px rgba(0,0,0,.5);
+
 }
 
 .markdown-section h1,.markdown-section h2,.markdown-section h3,.markdown-section h4,.markdown-section strong {
