Track 1 files into repository.
- modified assets/css/neodocs.css

Auto commit by GitBook Editor

--- a/assets/css/neodocs.css
+++ b/assets/css/neodocs.css
@@ -415,8 +415,8 @@ main.hidden {
 }
 
 .sidebar-toggle span {
-	background-color: #ea6f5a;
-	background-color: var(--theme-color,#ea6f5a);
+	background-color: #a4ada7;
+	background-color: var(--theme-color,#a4ada7);
 	display: block;
 	margin-bottom: 4px;
 	width: 16px;
