--- a/assets/css/neodocs.css
+++ b/assets/css/neodocs.css
@@ -312,7 +312,7 @@ main.hidden {
 }
 
 .sidebar {
-	border-right: 1px solid rgba(0,0,0,.07);
+    border-right: 1px solid rgba(0, 0, 0, 0.21);
 	overflow-y: auto;
 	padding: 40px 0 0;
 	top: 0;
