--- a/assets/css/neodocs.css
+++ b/assets/css/neodocs.css
@@ -1085,3 +1085,8 @@ input[type=search] {
 	border-color: #4f4f4f;
 	color: #ffffff
 }
+
+
+.search {
+    border-bottom: 1px solid #707070 !important;
+}
