--- a/assets/css/neodocs.css
+++ b/assets/css/neodocs.css
@@ -396,7 +396,6 @@ main.hidden {
 
 .sidebar-toggle {
 	background-color: transparent;
-	background-color: rgba(63,63,63,.8);
 	border: 0;
 	outline: 0;
 	padding: 10px;
@@ -415,8 +414,8 @@ main.hidden {
 }
 
 .sidebar-toggle span {
-	background-color: #a4ada7;
-	background-color: var(--theme-color,#a4ada7);
+	background-color: #d3d3d3;
+	background-color: var(--theme-color,#d3d3d3);
 	display: block;
 	margin-bottom: 4px;
 	width: 16px;
@@ -1089,4 +1088,8 @@ input[type=search] {
 
 .search {
     border-bottom: 1px solid #707070 !important;
+}
+
+.section.cover.show {
+    background: linear-gradient(to left bottom, hsl(7, 100%, 85%) 0%, hsl(196, 100%, 85%) 100%) !important;
 }
