Track 1 files into repository.
- modified assets/css/neodocs.css

Auto commit by GitBook Editor

--- a/assets/css/neodocs.css
+++ b/assets/css/neodocs.css
@@ -1109,3 +1109,8 @@ input[type=search] {
 	border: 1px solid #ccc;
 	border-bottom-color: #ccc;
 }
+
+.sidebar>h1 a {
+	color: #bcbcbc;
+	text-decoration: none
+}
