Track 1 files into repository.
- modified assets/css/neodocs.css

Auto commit by GitBook Editor

--- a/assets/css/neodocs.css
+++ b/assets/css/neodocs.css
@@ -1115,6 +1115,10 @@ input[type=search] {
 	text-decoration: none
 }
 
+.markdown-section h1,.markdown-section h2,.markdown-section h3,.markdown-section h4,.markdown-section strong {
+	color: #c5efff;
+	font-weight: 600
+}
 /*!
 Pure v1.0.0
 Copyright 2013 Yahoo!
