--- a/neodocs.css
+++ b/neodocs.css
@@ -420,7 +420,7 @@ body.sticky .sidebar,body.sticky .sidebar-toggle {
 }
 
 .markdown-section p.tip,.markdown-section tr:nth-child(2n) {
-	background-color: #f8f8f8
+	background-color: rgba(255, 255, 255, 0.19);
 }
 
 .markdown-section p.tip {
