--- a/assets/css/neodocs.css
+++ b/assets/css/neodocs.css
@@ -133,7 +133,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	color: #ffffff;
 	font-family: Source Sans Pro,Helvetica Neue,Arial,sans-serif;
-	font-size: 15px;
+	font-size: 18px;
 	letter-spacing: 0;
 	margin: 0;
 	overflow-x: hidden
@@ -795,7 +795,7 @@ section.cover.has-mask .mask {
 }
 
 .sidebar,body {
-	background-color: #8c8ca1
+	background-color: #2f2f2f;
 }
 
 .sidebar ul li a {
